# scipath

./: .gitmodules  .pylintrc  README.md  cubic_ppp.py  cubic_spline_interpolator.py  cubic_spline_pp.py  main.py  pyproject.toml  requirements.txt  test.ipynb
.github/: renovate.json
.github/workflows/: formatter.yml  main.yml
benchmarks/: benchmark.py
examples/: example.py
scipath/: __init__.py  cubic_path2d.py
tests/: conftest.py  test.ipynb  test_exception.py  test_profile.py  test_regression.py  waypoints.csv
typings/benchmarks/pycubicspline/: pycubicspline.pyi
typings/numpy/: linalg.pyi
