[project]
dependencies = ["scipy>=1.9.0"]
name = "scipath"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"

[dependency-groups]
dev = ["nodejs-wheel-binaries>=22.17.1", "pyright>=1.1.403", "pytest>=8.3.5"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 120
extend-exclude = ["benchmarks/pycubicspline"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "INP001", "PLC0414", "PT013", "TC003"]

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "typings"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.pytest.ini_options]
norecursedirs = ["benchmarks/pycubicspline"]
