[project]
dependencies = ["scipy>=1.11.0", "scipy>=1.13.0; python_version >= '3.12'"]
name = "scipath"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "nodejs-wheel-binaries>=22.18.0",
    "pyright>=1.1.405",
    "pytest>=8.4.1",
    "ruff>=0.13.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 120
extend-exclude = ["benchmarks/pycubicspline"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "INP001", "PLC0414", "PT013"]

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "typings"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "benchmarks/pycubicspline"]

[tool.pytest.ini_options]
norecursedirs = ["benchmarks/pycubicspline"]
