[project]
dependencies = ["scipy>=1.11.0", "scipy>=1.13.0; python_version >= '3.12'"]
name = "scipath"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = ["nodejs-wheel-binaries>=24.13.0", "pyright>=1.1.408", "pytest>=8.3.5", "ruff>=0.14.11"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 120
extend-exclude = ["benchmarks/pycubicspline"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "INP001", "PLC0414", "PT013", "TC003"]

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "typings"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "benchmarks/pycubicspline"]

[tool.pytest.ini_options]
norecursedirs = ["benchmarks/pycubicspline"]
